--- a/letscook/app/src/main/res/values/colors.xml
+++ b/letscook/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#F7981A</color>
+    <color name="colorPrimaryDark">#393939</color>
+    <color name="colorAccent">#D6D6D6</color>
 </resources>
