--- a/letscook/app/src/main/res/layout/activity_recipe_detail_view.xml
+++ b/letscook/app/src/main/res/layout/activity_recipe_detail_view.xml
@@ -6,4 +6,74 @@
     android:layout_height="match_parent"
     tools:context=".views.RecipeDetailView">
 
+    <ImageView
+        android:id="@+id/recipeImg"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:src="@drawable/ic_launcher_background"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:id="@+id/starsContentLayout"
+        app:layout_constraintTop_toBottomOf="@id/recipeImg"
+        android:layout_marginTop="20dp">
+
+        <ImageView
+            android:id="@+id/star1"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_launcher_background"
+            />
+        <ImageView
+            android:id="@+id/star2"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_launcher_background"
+            />
+        <ImageView
+            android:id="@+id/star3"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_launcher_background"
+            />
+        <ImageView
+            android:id="@+id/star4"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_launcher_background"
+            />
+        <ImageView
+            android:id="@+id/star5"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:src="@drawable/ic_launcher_background"
+            />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/recipeInstructionsTxt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp"
+        android:text="TextView"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/starsContentLayout" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
