--- a/letscook/app/src/main/res/layout/recipe_item.xml
+++ b/letscook/app/src/main/res/layout/recipe_item.xml
@@ -23,6 +23,8 @@
                 android:text="title recipe"
                 android:textStyle="bold"
                 android:textSize="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginStart="15dp"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
