Some changes to desing and searchView
Some changes to desing and searchView

--- a/letscook/app/src/main/res/values/colors.xml
+++ b/letscook/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#F7981A</color>
     <color name="colorPrimaryDark">#393939</color>
-    <color name="colorAccent">#D6D6D6</color>
+    <color name="colorAccent">#F3F2F2</color>
 </resources>
