--- a/letscook/app/src/main/res/layout/activity_recipe_detail_view.xml
+++ b/letscook/app/src/main/res/layout/activity_recipe_detail_view.xml
@@ -6,35 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".views.RecipeDetailView">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimary"
-        android:id="@+id/topTitleBar"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/recipeTitleTxt"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="TextView"
-            android:textSize="30dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:textColor="@color/colorAccent"
-            app:layout_constraintTop_toBottomOf="@id/starsContentLayout" />
-
-    </LinearLayout>
-
     <ImageView
         android:id="@+id/recipeImg"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:src="@drawable/ic_launcher_background"
-        app:layout_constraintTop_toBottomOf="@id/topTitleBar" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <LinearLayout
