--- a/letscook/app/src/main/res/layout/activity_recipe_view.xml
+++ b/letscook/app/src/main/res/layout/activity_recipe_view.xml
@@ -6,30 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".views.RecipeView">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimary"
-        android:id="@+id/searchBarLayout"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="20dp">
-
-        <SearchView
-            android:id="@+id/searchBar"
-            android:layout_width="match_parent"
-            android:layout_height="60dp" />
-
-    </LinearLayout>
 
     <ListView
         android:id="@+id/recipesListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/searchBarLayout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="40dp"/>
+        android:layout_height="match_parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
